<resources>
    <string name="app_name">Manage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_class">Lớp học</string>
    <string name="menu_transcript">Bảng điểm</string>
    <string name="menu_summary">Tổng kết học kỳ</string>
    <string name="menu_setting">Quy định</string>
    <string name="search">Tìm kiếm</string>
    <string name="add_button">Add button</string>
    <string name="menu_student">Học sinh</string>
    <string name="tv_studentDialog">Đăng ký học sinh</string>

    <string name="tv_name">Họ và tên</string>
    <string name="gender">Giới tính</string>
    <string name="birthDate">Ngày sinh</string>
    <string name="ID">ID</string>
    <string name="address">Địa chỉ thường trú</string>
    <string name="email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="sign_up">Đăng ký</string>
    <string name="tv_login">Vui lòng đăng nhập với tài khoản của bạn</string>
    <string name="login">Đăng nhập</string>
    <string name="btn_signup">Tạo tài khoản</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendants">Sĩ số :</string>
    <string name="complete">Hoàn thành</string>
    <string name="subject">Môn học</string>
    <string name="semester">Học kỳ</string>
    <string name="choose_class">Chọn lớp bạn muốn xem</string>
    <string name="choose_subject">Chọn môn học bạn muốn xem</string>
    <string name="choose_semester">Chọn học kì bạn muốn xem</string>

    <string name="setting_header1">Quy định 1</string>
    <string name="setting_header2">Quy định 2</string>
    <string name="setting_header3">Quy định 3</string>
    <string name="setting_header4">Quy định 4</string>

    <string name="setting_description1">Tuổi tối thiểu, tối đa khi đăng ký học sinh</string>
    <string name="setting_description2">Sĩ số tối đa ● Số lượng và tên lớp</string>
    <string name="setting_description3">Số lượng ● Tên các môn học</string>
    <string name="setting_description4">Điểm chuẩn đánh giá đạt môn.</string>
    <string name="tvStudentMaxAge">Tuổi tối đa để đăng ký :</string>
    <string name="grade15">Điểm 15 phút</string>
    <string name="grade45">Điểm 45 phút</string>
    <string name="semesterGrade">Điểm cuối HK</string>
    <string name="logOut">Đăng xuất</string>
    <string name="hint_name"><i>Họ và tên</i></string>
    <string name="hint_address"><i>Địa chỉ thường trú</i></string>
    <string name="hint_birthDate"><i>Ngày sinh</i></string>
    <string name="hint_ID"><i>ID</i></string>
    <string name="hint_email"><i>Nhập email</i></string>
    <string name="hint_email_login"><i><font size="16">Nhập email của bạn</font></i></string>
    <string name="hint_name_login"><i><font size="16">Nhập tên của bạn</font></i></string>
    <string name="password">Mật khẩu</string>
    <string name="hint_password"><i><font size="16">Nhập mật khẩu của bạn</font></i></string>
    <string name="menu_summary_subject">Tổng kết môn học</string>
</resources>
