<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@color/white">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/student_avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:padding="5dp"

        android:scaleType="centerCrop"
        android:src="@drawable/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:shapeAppearanceOverlay="@style/circle" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:padding="5dp"

        android:src="@drawable/baseline_add_a_photo_24"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="@+id/student_avatar"
        app:layout_constraintEnd_toEndOf="@+id/student_avatar" />

    <EditText
        android:id="@+id/student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/edit_text_bg"

        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="7sp"

        android:hint="@string/hint_name"

        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_avatar" />


    <EditText
        android:id="@+id/student_birthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/edit_text_bg"


        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:drawablePadding="7sp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/hint_birthDate"

        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:textSize="16sp"
        android:maxEms="8"

        app:layout_constraintStart_toStartOf="@+id/student_name"
        app:layout_constraintTop_toBottomOf="@+id/student_name" />


    <EditText
        android:id="@+id/student_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="30sp"

        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/baseline_id_24"
        android:drawablePadding="7sp"
        android:ems="6"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/hint_ID"

        android:padding="10dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/light_black"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="@+id/student_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/student_birthDate"
        app:layout_constraintTop_toBottomOf="@+id/student_birthDate" />

    <Spinner
        android:id="@+id/student_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"

        android:background="@drawable/edit_text_bg"
        android:spinnerMode="dropdown"
        android:padding="5sp"

        app:layout_constraintStart_toStartOf="@+id/student_name"
        app:layout_constraintTop_toBottomOf="@+id/student_ID" />


    <EditText
        android:id="@+id/student_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/edit_text_bg"

        android:drawableStart="@drawable/baseline_location_on_24"
        android:drawablePadding="7sp"
        android:hint="@string/hint_address"

        android:textColorHint="@color/light_black"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_gender" />

    <EditText
        android:id="@+id/student_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/edit_text_bg"

        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="7sp"
        android:hint="@string/hint_email"

        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textColorHint="@color/light_black"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_address" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addStudent_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"

        android:background="@drawable/button_bg"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_email" />


</androidx.constraintlayout.widget.ConstraintLayout>